# PeerBridge_CLI

./: .gitignore
backend/: app.py
client/: CMakeLists.txt  copy_deps.cmake  external
client/include/: P2PSystem.hpp  chat_app.hpp  crypto.hpp  logger.hpp  networkconfigmanager.hpp  networking.hpp  p2p_system.hpp  signaling.hpp  stun.hpp  systemstatemanager.hpp  tun_interface.hpp  utils.hpp
client/src/: NetworkingModule.cpp  P2PSystem.cpp  TUNInterface.cpp  chat_app.cpp  crypto.cpp  logger.cpp  main.cpp  networkconfigmanager.cpp  networking.cpp  p2p_system.cpp  signaling.cpp  stun.cpp  systemstatemanager.cpp  tun_interface.cpp
